fix glassomrhism on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,29 +4,38 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Geologica:wght@300;400;500;700&display=swap");
 
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+  .glassmorphism {
+    backdrop-filter: blur(12px);
+    background: rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
 }
 
 @font-face {
-  font-family: 'Stapel';
-  src: local('Stapel Bold'), local('Stapel-Bold'),
-      url('../../public/font/Stapel-Bold.woff2') format('woff2'),
-      url('../../public/font/Stapel-Bold.woff') format('woff'),
-      url('../../public/font/Stapel-Bold.ttf') format('truetype');
+  font-family: "Stapel";
+  src: local("Stapel Bold"), local("Stapel-Bold"),
+    url("../../public/font/Stapel-Bold.woff2") format("woff2"),
+    url("../../public/font/Stapel-Bold.woff") format("woff"),
+    url("../../public/font/Stapel-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 html {
-  scroll-behavior: smooth!important;
+  scroll-behavior: smooth !important;
 }
 
 .bg-ellipse-gradient {
-  background: radial-gradient(circle at center, rgba(173, 216, 230, 0.5), rgba(255, 255, 255, 0));
+  background: radial-gradient(
+    circle at center,
+    rgba(173, 216, 230, 0.5),
+    rgba(255, 255, 255, 0)
+  );
   border-radius: 50%;
   width: 160%;
   height: 160%;
@@ -50,4 +59,3 @@ html {
   border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
